https://github.com/opencrx/opencrx/issues/46